# quantic

./: .gitignore  README.md  pyproject.toml
quantic/: __init__.py  __main__.py
quantic/utils/: Division.py
tests/: Test.py
